# tui-lipan

./: .gitignore  AGENTS.md  CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  deny.toml  please-plan-the-full-functional-oasis.md
.agents/skills/tui-lipan-app-builder/: SKILL.md
.agents/skills/tui-lipan-layout-debug/: SKILL.md
.agents/skills/tui-lipan-ui-sketch/: SKILL.md
.agents/skills/tui-lipan-visual-design/: SKILL.md
.agents/skills/tui-lipan-widget/: SKILL.md
.cargo/: config.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  dco.yml  release.yml
benches/: document_view_markdown.rs  document_view_wrap.rs  scroll_reorder_reconcile.rs  scroll_view_rich_children.rs  text_area_reconcile.rs
docs/: DESIGN.md  clipboard.md  components.md  enums.md  error-handling.md  events.md  examples.md  external-programs.md  focus.md  index.md  inline-mode.md  keybindings.md  large-app-shells.md  macros.md  package-lock.json  package.json  patterns.md  perf.md  quick-start.md  styling.md  text-editing.md  tutorial.md  web-backend.md  widget-authoring.md  widget-defaults.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: NavGitHubLink.vue  NavTitleMeta.vue  index.ts  style.css
docs/public/: CNAME  context7.json  site.webmanifest
docs/widgets/: data.md  diagrams.md  display.md  effects.md  feedback.md  index.md  input.md  layout.md  overlays.md  tabs.md  terminal-images.md  terminal.md
examples/: alpha_foreground_backdrop.rs  animated_sequential_swap.rs  animated_showcase.rs  ansi_passthrough.rs  ascii_canvas_exporter.rs  ascii_canvas_ghost.rs  ascii_canvas_scroll.rs  auto_height_test.rs  big_text.rs  burst_effects.rs  chart_showcase.rs  color_contrast.rs  command_palette.rs  context_provider.rs  dashboard.rs  devtools.rs  diagnostics.rs  diagram_showcase.rs  diff_hub.rs  diff_hunk_navigation.rs  document_view_mermaid.rs  drag_drop_kanban.rs  effect_scope_dot_field.rs  effects_ripple.rs  figlet_editor.rs  flow_badges.rs  flowchart_showcase.rs  form_validation.rs  forms.rs  frame_hub.rs  gradient_widgets.rs  graph_showcase.rs  grid_basic.rs  heatmap.rs  hex_area.rs  hover.rs  image.rs  image_modes.rs  inline.rs  inline_auto_height.rs  (+59 more)
examples/assets/: ghost.json  opencode_logo.json  theme.toml
examples/common/: tui_lipan_art.rs
examples/fonts/: custom.flf
examples/web/: Makefile  xterm-wasm-host.example.html
examples/web/hello/: Cargo.toml  README.md  index.html  package-lock.json  package.json  serve.py
examples/web/search_palette/: Cargo.toml  README.md  index.html  package-lock.json  package.json  serve.py
examples/web/search_palette/src/: lib.rs
examples/web/shared/: Cargo.toml  sgr_mouse.js
scripts/: check-children-replace.py  check-feature-tables.py  check-widget-style-slots.py  check-widget-variant-parity.py  format-rust-with-macros  format-rust-with-rsx  generate-node-kind-delegate-arms.py  generate-widget-defaults.py
src/: callback.rs  callbacks.rs  capture.rs  debug.rs  lib.rs  mockup.rs  overlay.rs  prelude.rs  process.rs  runtime.rs  test_backend.rs  text_motion.rs  widget_manifest.rs
src/animation/: easing.rs  mod.rs  registry.rs  transition.rs
src/app/: context.rs  copy_feedback.rs  focus_service.rs  interaction_state.rs  mod.rs  web_runner.rs
src/app/input/: command_registry.rs  convert.rs  focus.rs  geometry.rs  hex_history.rs  key_dispatch.rs  keyboard.rs  keymap.rs  mod.rs  runtime_dispatch.rs  scrollbar.rs  text.rs  text_area_vim.rs
src/app/mouse_dispatch/: click.rs  dispatch_drag.rs  mod.rs  (+3 more)
src/backend/: mod.rs
src/capture/: png.rs
src/clipboard/: commands.rs  error.rs  handle.rs  mod.rs  osc52.rs  provider.rs  service.rs
src/core/: component.rs  context_value.rs  element.rs  element_debug.rs  event.rs  mask.rs  memo.rs  mod.rs  runtime_env.rs
src/devtools/: component.rs  mod.rs  state.rs
src/input/: mod.rs
src/layout/: axis.rs  drag_source_layout_hint.rs  hash.rs  measure.rs  mod.rs  tag.rs
src/style/: ansi.rs  color.rs  document_baking.rs  effects.rs  geometry.rs  layout.rs  mod.rs  palette.rs  presets.rs  reload.rs  resolve.rs  terminal_colors.rs  text.rs  theme.rs
src/text/: buffer.rs  edit.rs  editor.rs  input.rs  line_index.rs  mod.rs
src/ui/: capabilities.rs  mod.rs  router.rs
src/ui_snapshot/: describe.rs  format.rs  kind.rs  mod.rs  options.rs  request.rs  slot.rs
src/utils/: arena.rs  braille.rs  color_contrast.rs  diff.rs  file_icons.rs  gen_cache.rs  gradient.rs  math.rs  mod.rs  nucleo.rs  open_url.rs  prepared_text.rs  scrollbar.rs  selection.rs  text.rs
src/validation/: mod.rs
src/widgets/: badge.rs  breadcrumb.rs  combo_box.rs  command_palette.rs  context_menu.rs  context_provider.rs  hyperlink.rs  internal.rs  managed_terminal.rs  mod.rs  modal.rs  multi_select.rs  pagination.rs  radio.rs  selection.rs  status_bar.rs  status_bar_layout.rs  theme_provider.rs  tooltip.rs
tests/: capture_frame.rs  drag_drop_test_backend.rs  file_tree_collapsed_projection.rs  flow_in_hstack_wraps.rs  gantt_diagram_render.rs  inline_api_contract.rs  inline_surface_resize.rs  inline_terminal_handoff.rs  inline_transcript_history.rs  layout_integration.rs  modal_reserve_height.rs  progress_empty_track_surface.rs  sequence_diagram_theme_render.rs  style_slot_render.rs  table_row_gap_render.rs  table_styles_render.rs  tabs_caps_render.rs  text_motion.rs  ui_snapshot.rs
tests/support/: inline_surface_fixture.rs
tui-lipan-macro/: Cargo.toml  README.md
tui-lipan-macro/snippets/: vscode.code-snippets
tui-lipan-macro/src/: format_common.rs  lib.rs  rsx_ast.rs  rsx_expand.rs  rsx_format.rs  ui_ast.rs  ui_expand.rs  ui_format.rs
tui-lipan-macro/tests/: ui_fmt_fixtures.rs
tui-lipan-macro/tests/fixtures/ui-fmt/: 01_single_leaf.expected.rs  02_nested_parents.input.rs  03_for_loop.expected.rs  04_if_else_chain.expected.rs  05_key_attribute.expected.rs  06_semicolon_to_comma.input.rs  07_comment_bail_out.input.rs  08_mixed_nested_macros.expected.rs  09_inline_leaf_in_block.input.rs  10_vec_method_chains.input.rs
(+449 files in other folders)
