[package]
name = "tui-lipan-macro"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MPL-2.0"
description = "Procedural macros for the tui-lipan TUI framework (ui!, rsx!, mockup!)."
repository = "https://github.com/tui-lipan/tui-lipan"
documentation = "https://docs.rs/tui-lipan-macro"
readme = "README.md"
keywords = ["tui", "terminal", "ratatui", "macro", "ui"]
categories = ["command-line-interface", "gui"]
authors = ["Adam Mikołajczyk <adam@tui-lipan.dev>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.107", features = ["span-locations"] }
quote = "1.0.47"
syn = { version = "3.0.2", features = ["full", "visit"] }
proc-macro-crate = "3"
prettyplease = "0.3.0"
