[package]
name = "tui-lipan-web-search-palette"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
tui-lipan = { path = "../../..", default-features = false, features = ["web"] }
tui-lipan-web-shared = { path = "../shared" }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "EventTarget",
    "KeyboardEvent",
] }

[workspace]
